force-app/main/default/objects/copado__Static_Code_Analysis_Settings__c/fields/copado__Cloud_Organization__c.field-meta.xml
<CustomField>
    <fullName>copado__Cloud_Organization__c</fullName>
    <description>You can get this Organization Id in CodeScan Cloud, under your profile, in the &quot;My Organizations&quot; setup menu.</description>
    <inlineHelpText>You can get this Organization Id in CodeScan Cloud, under your profile, in the &quot;My Organizations&quot; setup menu.</inlineHelpText>
    <label>Cloud Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>