force-app/main/default/objects/copado__Static_Code_Analysis_Settings__c/fields/copado__CodeScan_Token__c.field-meta.xml
<CustomField>
    <fullName>copado__CodeScan_Token__c</fullName>
    <label>CodeScan Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>