force-app/main/default/objects/copado__Static_Code_Analysis_Settings__c/fields/copado__CodeScan_Version__c.field-meta.xml
<CustomField>
    <fullName>copado__CodeScan_Version__c</fullName>
    <inlineHelpText>Cloud version requires a CodeScan Cloud license.
On-premise SonarQube requires your SonarQube instance to be accesible through internet.</inlineHelpText>
    <label>CodeScan Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>On-premise SonarQube</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>