force-app/main/default/objects/copado__Static_Code_Analysis_Settings__c/fields/copado__ReportIssuesFromLatestCommit__c.field-meta.xml
<CustomField>
    <fullName>copado__ReportIssuesFromLatestCommit__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Report Issues From Latest Commit</label>
    <type>Checkbox</type>
</CustomField>