force-app/main/default/objects/copado__Static_Code_Analysis_Settings__c/recordTypes/copado__CodeScan.recordType-meta.xml
<RecordType>
    <fullName>copado__CodeScan</fullName>
    <active>true</active>
    <description>Record Type for CodeScan integration. Requires CodeScan licensing.</description>
    <label>CodeScan</label>
</RecordType>