force-app/main/default/objects/copado__Static_Code_Analysis_Settings__c/validationRules/copado__CodeScan_Required_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>copado__CodeScan_Required_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>IF (ISPICKVAL( copado__CodeScan_Version__c, &apos;Cloud&apos;),
            ISBLANK( copado__Cloud_Organization__c ), 
            FALSE )</errorConditionFormula>
    <errorMessage>Review the following required fields:
Cloud Organization is required for Cloud Version.
SonarQube Token and URL are required for On-premise Version.</errorMessage>
</ValidationRule>